Trying to fix alignment (again).

--- a/diffeqguide/courses/course_styles.css
+++ b/diffeqguide/courses/course_styles.css
@@ -71,7 +71,7 @@
   .sidenav a {font-size: 18px;}
 }
 
-.body{
+p {
 	text-align: left;
 }
 
